--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "json-env-config",
-  "version": "1.0.1",
+  "version": "1.0.4",
   "description": "Load environment variables from json file",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "prepublish": "npm run build",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cd test && node test.js"
   },
   "keywords": ["json", "env", "config"],
   "author": "n_tony",
